conexão com o banco e dados estabelecida e criação de tabela.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,7 @@
 spring.application.name=aplicacaocrud
+spring.datasource.url=jdbc:postgresql://localhost:5432/product
+spring.datasource.username=postgres
+spring.datasource.password=5226
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
